Update CORS urls. Clean up JWT class.